[TBD-3392] Support sqoop parquet import in HDP240 & CDH570

--- a/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
@@ -487,6 +487,27 @@
             id="kafka-clients-0.8.2.1.jar"
             name="kafka-clients-0.8.2.1.jar"
             mvn_uri="mvn:org.talend.libraries/kafka-clients-0.8.2.1/6.0.0">
+        </libraryNeeded>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh570"
+            id="kite-data-core-1.0.0-cdh5.7.0.jar"
+            name="kite-data-core-1.0.0-cdh5.7.0.jar"
+            mvn_uri="mvn:org.talend.libraries/kite-data-core-1.0.0-cdh5.7.0/6.0.0">
+        </libraryNeeded>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh570"
+            id="kite-data-mapreduce-1.0.0-cdh5.7.0.jar"
+            name="kite-data-mapreduce-1.0.0-cdh5.7.0.jar"
+            mvn_uri="mvn:org.talend.libraries/kite-data-mapreduce-1.0.0-cdh5.7.0/6.0.0">
+        </libraryNeeded>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh570"
+            id="kite-hadoop-compatibility-1.0.0-cdh5.7.0.jar"
+            name="kite-hadoop-compatibility-1.0.0-cdh5.7.0.jar"
+            mvn_uri="mvn:org.talend.libraries/kite-hadoop-compatibility-1.0.0-cdh5.7.0/6.0.0">
         </libraryNeeded>        
                         
         <!-- Groups -->
@@ -841,6 +862,19 @@
              <library id="jackson-datatype-joda-2.1.0"/>
              <library id="joda-time-2.5.jar"/>
              <library id="httpclient-4.2.5.jar"/>
+        </libraryNeededGroup>
+        
+        <!-- Sqoop Parquet group -->
+        <libraryNeededGroup
+                description="Sqoop Parquet libraries for CDH 5.7"
+                id="SQOOP-PARQUET-LIB-CDH_5_7"
+                name="SQOOP-PARQUET-LIB-CDH_5_7">
+            <library id="kite-data-core-1.0.0-cdh5.7.0.jar"/>
+            <library id="kite-data-mapreduce-1.0.0-cdh5.7.0.jar"/>
+            <library id="kite-hadoop-compatibility-1.0.0-cdh5.7.0.jar"/>
+            <library id="jackson-databind-2.2.3.jar"/>
+            <library id="jackson-core-2.2.3.jar"/>
+            <library id="parquet-avro-cdh5.7.0"/>
         </libraryNeededGroup>
     </extension>
     <extension
