--- a/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
@@ -317,7 +317,7 @@
             context="plugin:org.talend.hadoop.distribution.hdp240"
             id="kafka-HDP_2_4"
             name="kafka_2.10-0.9.0.2.4.0.0-169.jar"
-            mvn_uri="mvn:org.talend.libraries/kafka_2.10-0.9.0.2.4.0.0-169.jar/6.1.0">
+            mvn_uri="mvn:org.talend.libraries/kafka_2.10-0.9.0.2.4.0.0-169/6.1.0">
         </libraryNeeded>
         
         <libraryNeeded
