--- a/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
@@ -470,9 +470,9 @@
                 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh570"
-            id="kafka_2.10-0.8.2.1.jar"
-            name="kafka_2.10-0.8.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/kafka_2.10-0.8.2.1/6.0.0">
+            id="kafka-cdh5.7.0"
+            name="kafka_2.10-0.9.0-kafka-2.0.0.jar"
+            mvn_uri="mvn:org.talend.libraries/kafka_2.10-0.9.0-kafka-2.0.0/6.0.0">
         </libraryNeeded>        
                 
         <libraryNeeded
@@ -484,9 +484,9 @@
                 
         <libraryNeeded
             context="plugin:org.talend.libraries.apache.kafka"
-            id="kafka-clients-0.8.2.1.jar"
-            name="kafka-clients-0.8.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/kafka-clients-0.8.2.1/6.0.0">
+            id="kafka-clients-cdh5.7.0"
+            name="kafka-clients-0.9.0-kafka-2.0.0.jar"
+            mvn_uri="mvn:org.talend.libraries/kafka-clients-0.9.0-kafka-2.0.0/6.0.0">
         </libraryNeeded>
         
         <libraryNeeded
@@ -823,7 +823,8 @@
                 id="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-CDH_5_7"
                 name="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-CDH_5_7">
             <library id="spark-streaming-kafka-cdh5.7.0"/>
-            <library id="kafka_2.10-0.8.2.1.jar"/>
+            <library id="kafka-cdh5.7.0"/>
+            <library id="kafka-clients-cdh5.7.0"/>
             <library id="metrics-core-2.2.0.jar"/>
         </libraryNeededGroup>
         
@@ -832,7 +833,7 @@
                 description="Spark Kafka client libraries for CDH 5.5 that are MRREQUIRED"
                 id="SPARK-KAFKA-CLIENT-LIB-MRREQUIRED-CDH_5_7"
                 name="SPARK-KAFKA-CLIENT-LIB-MRREQUIRED-CDH_5_7">
-            <library id="kafka-clients-0.8.2.1.jar"/>
+            <library id="kafka-clients-cdh5.7.0"/>
         </libraryNeededGroup>
         
         <!-- Spark Kafka Avro group MRREQUIRED -->
