--- a/main/plugins/org.talend.hadoop.distribution.mapr401/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr401/plugin.xml
@@ -31,6 +31,10 @@
       <classloader
             index="HDFS:MAPR:MAPR401"
             libraries="maprfs-4.0.1-mapr.jar;hadoop-auth-2.4.1-mapr-1408.jar;hadoop-common-2.4.1-mapr-1408.jar;zookeeper-3.4.5-mapr-1406.jar;json-20080701.jar;guava-13.0.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;commons-logging-1.1.3.jar;commons-collections-3.2.1.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;libprotodefs.jar;log4j-1.2.17.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
+      </classloader>
+      <classloader
+            index="HCATALOG:MAPR:MAPR401"
+            libraries="maprfs-4.0.1-mapr.jar;hadoop-auth-2.4.1-mapr-1408.jar;hadoop-common-2.4.1-mapr-1408.jar;zookeeper-3.4.5-mapr-1406.jar;json-20080701.jar;guava-13.0.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;commons-logging-1.1.3.jar;commons-collections-3.2.1.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;libprotodefs.jar;log4j-1.2.17.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>         
    </extension>
 
