--- a/main/plugins/org.talend.hadoop.distribution.mapr410/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr410/plugin.xml
@@ -45,6 +45,10 @@
       <classloader
             index="HDFS:MAPR:MAPR410"
             libraries="commons-logging-1.1.3.jar;avro-1.7.6.jar;json-20080701.jar;log4j-1.2.17.jar;jackson-core-asl-1.8.8.jar;protobuf-java-2.5.0.jar;hadoop-auth-2.5.1-mapr-1503.jar;hadoop-common-2.5.1-mapr-1503.jar;maprfs-4.1.0-mapr.jar;maprfs-jni-4.1.0-mapr.jar;guava-13.0.1.jar;libprotodefs-4.1.0-mapr.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;slf4j-log4j12-1.7.5.jar;commons-collections-3.2.1.jar;jackson-mapper-asl-1.8.8.jar;zookeeper-3.4.5-mapr-1406.jar;slf4j-api-1.7.5.jar;hadoop-mapreduce-client-common-2.5.1-mapr-1503.jar;hadoop-mapreduce-client-core-2.5.1-mapr-1503.jar;hadoop-mapreduce-client-jobclient-2.5.1-mapr-1503.jar;hadoop-mapreduce-client-shuffle-2.5.1-mapr-1503.jar;hadoop-yarn-common-2.5.1-mapr-1503.jar;hadoop-yarn-client-2.5.1-mapr-1503.jar;hadoop-yarn-api-2.5.1-mapr-1503.jar;hadoop-yarn-server-web-proxy-2.5.1-mapr-1503.jar">
+      </classloader>
+      <classloader
+            index="HCATALOG:MAPR:MAPR410"
+            libraries="commons-logging-1.1.3.jar;avro-1.7.6.jar;json-20080701.jar;log4j-1.2.17.jar;jackson-core-asl-1.8.8.jar;protobuf-java-2.5.0.jar;hadoop-auth-2.5.1-mapr-1503.jar;hadoop-common-2.5.1-mapr-1503.jar;maprfs-4.1.0-mapr.jar;maprfs-jni-4.1.0-mapr.jar;guava-13.0.1.jar;libprotodefs-4.1.0-mapr.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;slf4j-log4j12-1.7.5.jar;commons-collections-3.2.1.jar;jackson-mapper-asl-1.8.8.jar;zookeeper-3.4.5-mapr-1406.jar;slf4j-api-1.7.5.jar;hadoop-mapreduce-client-common-2.5.1-mapr-1503.jar;hadoop-mapreduce-client-core-2.5.1-mapr-1503.jar;hadoop-mapreduce-client-jobclient-2.5.1-mapr-1503.jar;hadoop-mapreduce-client-shuffle-2.5.1-mapr-1503.jar;hadoop-yarn-common-2.5.1-mapr-1503.jar;hadoop-yarn-client-2.5.1-mapr-1503.jar;hadoop-yarn-api-2.5.1-mapr-1503.jar;hadoop-yarn-server-web-proxy-2.5.1-mapr-1503.jar">
       </classloader>       
     </extension>
 </plugin>
