--- a/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
@@ -626,6 +626,10 @@
       <classloader
             index="IMPALA:MAPR:MAPR510"
             libraries=";">
+      </classloader>
+      <classloader
+            index="HCATALOG:MAPR:MAPR510"
+            libraries="avro-1.7.4.jar;commons-cli-1.2.jar;commons-codec-1.5.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-14.0.1.jar;hadoop-auth-2.7.0-mapr-1506.jar;hadoop-common-2.7.0-mapr-1506.jar;hadoop-hdfs-2.7.0-mapr-1506.jar;hadoop-mapreduce-client-app-2.7.0-mapr-1506.jar;hadoop-mapreduce-client-common-2.7.0-mapr-1506.jar;hadoop-mapreduce-client-contrib-2.7.0-mapr-1506.jar;hadoop-mapreduce-client-core-2.7.0-mapr-1506.jar;hadoop-mapreduce-client-hs-2.7.0-mapr-1506.jar;hadoop-mapreduce-client-hs-plugins-2.7.0-mapr-1506.jar;hadoop-mapreduce-client-jobclient-2.7.0-mapr-1506.jar;hadoop-mapreduce-client-shuffle-2.7.0-mapr-1506.jar;hadoop-yarn-api-2.7.0-mapr-1506.jar;hadoop-yarn-client-2.7.0-mapr-1506.jar;hadoop-yarn-common-2.7.0-mapr-1506.jar;hadoop-yarn-server-web-proxy-2.7.0-mapr-1506.jar;htrace-core-3.1.0-incubating.jar;jackson-core-asl-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;json-20080701.jar;log4j-1.2.17.jar;maprfs-5.1.0-mapr.jar;parquet-hadoop-bundle-1.6.0.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;snappy-java-1.0.4.1.jar;zookeeper-3.4.5-mapr-1503.jar;flexjson-2.1.jar">
       </classloader>            
     </extension>
 </plugin>
