--- a/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
+++ b/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
@@ -283,5 +283,14 @@
              name="AdaptDeprecatedHadoopVersionsMigrationTask"
              version="6.1.2">
        </projecttask>
+       <projecttask
+             beforeLogon="false"
+             breaks="6.0.0"
+             class="org.talend.repository.hadoopcluster.migration.ReviseInvalidContextNamesOfHadoopPropertiesMigrationTask"
+             description="Revise invalid context names of hadoop properties."
+             id="org.talend.repository.hadoopcluster.migration.ReviseInvalidContextNamesOfHadoopPropertiesMigrationTask"
+             name="ReviseInvalidContextNamesOfHadoopPropertiesMigrationTask"
+             version="6.1.2">
+       </projecttask>
     </extension>
 </plugin>
