TUP-5009: [6.1.1] Export Context on Metadata Hadoop Connection erroneous behavior when HA properties

--- a/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
+++ b/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
@@ -256,4 +256,16 @@
              serviceId="IRepositoryContextUpdateService">
        </Service>
     </extension>
+    <extension
+          point="org.talend.core.migrationTask">
+       <projecttask
+             beforeLogon="false"
+             breaks="6.0.0"
+             class="org.talend.repository.hadoopcluster.migration.ReviseInvalidContextNamesOfHadoopPropertiesMigrationTask"
+             description="Revise invalid context names of hadoop properties."
+             id="org.talend.repository.hadoopcluster.migration.ReviseInvalidContextNamesOfHadoopPropertiesMigrationTask"
+             name="ReviseInvalidContextNamesOfHadoopPropertiesMigrationTask"
+             version="6.1.2">
+       </projecttask>
+    </extension>
 </plugin>
