TBD-3842:CDH HBase which is created under the hadoop cluster created by retrieving configuration cannot check successfully.

--- a/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
@@ -901,7 +901,7 @@
       </classloader>
       <classloader
             index="HBASE:CLOUDERA:Cloudera_CDH5_5"
-            libraries="hbase-common-1.0.0-cdh5.5.2.jar;hbase-client-1.0.0-cdh5.5.2.jar;hbase-protocol-1.0.0-cdh5.5.2.jar;hadoop-common-2.6.0-cdh5.5.2.jar;hadoop-auth-2.6.0-cdh5.5.2.jar;commons-logging-1.2.jar;commons-codec-1.9.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-collections-3.2.2.jar;zookeeper-3.4.5-cdh5.5.2.jar;htrace-core-3.2.0-incubating.jar;htrace-core4-4.0.1-incubating.jar;guava-12.0.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;netty-3.6.6.Final.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;hbase-server-1.0.0-cdh5.5.2.jar">
+            libraries="hbase-common-1.0.0-cdh5.5.2.jar;hbase-client-1.0.0-cdh5.5.2.jar;hbase-protocol-1.0.0-cdh5.5.2.jar;hadoop-common-2.6.0-cdh5.5.2.jar;hadoop-auth-2.6.0-cdh5.5.2.jar;commons-logging-1.2.jar;commons-codec-1.9.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-collections-3.2.2.jar;zookeeper-3.4.5-cdh5.5.2.jar;htrace-core-3.2.0-incubating.jar;htrace-core4-4.0.1-incubating.jar;guava-12.0.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;netty-3.6.6.Final.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;hbase-server-1.0.0-cdh5.5.2.jar;hadoop-hdfs-2.6.0-cdh5.5.2.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-cli-1.2.jar">
       </classloader>  
       <classloader
             index="MAP_REDUCE:CLOUDERA:Cloudera_CDH5_5"
@@ -937,7 +937,7 @@
       </classloader>
       <classloader
             index="HBASE:CLOUDERA:Cloudera_CDH5_6"
-            libraries="hbase-common-1.0.0-cdh5.5.2.jar;hbase-client-1.0.0-cdh5.5.2.jar;hbase-protocol-1.0.0-cdh5.5.2.jar;hadoop-common-2.6.0-cdh5.5.2.jar;hadoop-auth-2.6.0-cdh5.5.2.jar;commons-logging-1.2.jar;commons-codec-1.9.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-collections-3.2.2.jar;zookeeper-3.4.5-cdh5.5.2.jar;htrace-core-3.2.0-incubating.jar;htrace-core4-4.0.1-incubating.jar;guava-12.0.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;netty-3.6.6.Final.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;hbase-server-1.0.0-cdh5.5.2.jar">
+            libraries="hbase-common-1.0.0-cdh5.5.2.jar;hbase-client-1.0.0-cdh5.5.2.jar;hbase-protocol-1.0.0-cdh5.5.2.jar;hadoop-common-2.6.0-cdh5.5.2.jar;hadoop-auth-2.6.0-cdh5.5.2.jar;commons-logging-1.2.jar;commons-codec-1.9.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-collections-3.2.2.jar;zookeeper-3.4.5-cdh5.5.2.jar;htrace-core-3.2.0-incubating.jar;htrace-core4-4.0.1-incubating.jar;guava-12.0.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;netty-3.6.6.Final.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;hbase-server-1.0.0-cdh5.5.2.jar;hadoop-hdfs-2.6.0-cdh5.5.2.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-cli-1.2.jar">
       </classloader>  
       <classloader
             index="MAP_REDUCE:CLOUDERA:Cloudera_CDH5_6"
