--- a/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBInput/tDynamoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBInput/tDynamoDBInput_messages.properties
@@ -105,3 +105,11 @@ VALUE_MAPPING.NAME=Value mapping
 VALUE_MAPPING.ITEM.PLACEHOLDER=Placeholder
 VALUE_MAPPING.ITEM.VALUE=value
 
+INHERIT_CREDENTIALS.NAME=Inherit credentials from AWS role
+ASSUME_ROLE.NAME=Assume role
+ARN.NAME=Role ARN
+ROLE_SESSION_NAME.NAME=Role session name
+SESSION_DURATION.NAME=Session duration
+
+SET_STS_ENDPOINT.NAME=STS Endpoint
+STS_ENDPOINT.NAME=
