TDI-36698: added instance roles and Assume roles to tDynamoDBOutput component.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBOutput/tDynamoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBOutput/tDynamoDBOutput_messages.properties
@@ -69,3 +69,12 @@ WCU.NAME=Write Capacity Unit
 NAME_MAPPING.NAME=Name mapping
 NAME_MAPPING.ITEM.PLACEHOLDER=Placeholder
 NAME_MAPPING.ITEM.NAME=name
+
+INHERIT_CREDENTIALS.NAME=Inherit credentials from AWS role
+ASSUME_ROLE.NAME=Assume role
+ARN.NAME=Role ARN
+ROLE_SESSION_NAME.NAME=Role session name
+SESSION_DURATION.NAME=Session duration
+
+SET_STS_ENDPOINT.NAME=STS Endpoint
+STS_ENDPOINT.NAME=
