--- a/main/plugins/org.talend.hadoop.distribution.mapr520/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr520/plugin.xml
@@ -4,6 +4,17 @@
     <extension point="org.talend.core.runtime.librariesNeeded">
     
     
+    
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.mapr.5.2.0"
+            id="spark-streaming-kafka-v09_2.10-1.6.1-mapr-1605.jar"
+            name="spark-streaming-kafka-v09_2.10-1.6.1-mapr-1605.jar"
+            mvn_uri="mvn:org.talend.libraries/spark-streaming-kafka-v09_2.10-1.6.1-mapr-1605/6.3.0"/>
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.mapr.5.2.0"
+            id="mapr-streams-5.2.0-mapr.jar"
+            name="mapr-streams-5.2.0-mapr.jar"
+            mvn_uri="mvn:org.talend.libraries/mapr-streams-5.2.0-mapr/6.3.0"/>
         <libraryNeeded
             context="plugin:org.talend.libraries.hadoop.mapr.5.2.0"
             id="datanucleus-api-jdo-4.2.1.jar"
@@ -656,7 +667,7 @@
                 description="Spark Kafka assembly libraries for MapR 5.2.0 that are MRREQUIRED"
                 id="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-MAPR520"
                 name="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-MAPR520">
-            <library id="spark-streaming-kafka-assembly_2.10-1.6.1.jar"/>
+            <!-- <library id="spark-streaming-kafka-assembly_2.10-1.6.1.jar"/> -->
         </libraryNeededGroup>
         
         <!-- Spark Kafka Client group MRREQUIRED -->
@@ -708,6 +719,50 @@
             <library id="joda-time-2.7.jar"/>            
         </libraryNeededGroup>
         
+        <!-- MapRStreams group -->    
+        <libraryNeededGroup
+                description="MapRStreams 5.2.0 libraries (based on Kafka 2.10-0.9.0.0-mapr-1607)"
+                id="MAPRSTREAMS-LIB-MAPR520"
+                name="MAPRSTREAMS-LIB-MAPR520">
+            <library id="maprfs-5.2.X-lastest"/>
+            <library id="protobuf-java-2.5.0.jar"/>
+            <library id="mapr-streams-5.2.0-mapr.jar"/>
+            <library id="kafka_2.10-0.9.0.0-mapr-1607.jar"/>
+            <library id="scala-library-2.10.5.jar"/>
+            <library id="jopt-simple-3.2.jar"/>
+            <library id="kafka-clients-0.9.0.0-mapr-1607.jar"/>
+            <library id="lz4-1.2.0.jar"/>
+            <library id="metrics-core-2.2.0.jar"/>
+            <library id="snappy-java-1.1.1.7.jar"/>
+            <library id="zkclient-0.7.jar"/>
+            <library id="zookeeper-3.4.6.jar"/>
+            <library id="log4j-1.2.17.jar"/>
+            <library id="slf4j-api-1.7.6.jar"/>
+            <library id="slf4j-log4j12-1.7.6.jar"/>
+            <library id="json-20080701.jar"/>
+            <library id="flexjson-2.1.jar"/>
+            <library id="guava-14.0.1.jar"/>
+        </libraryNeededGroup>
+        
+        <!-- Spark MapR Streams group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Spark MapR Streams libraries for MapR 5.2.0 that are MRREQUIRED"
+                id="SPARK-MAPRSTREAMS-ASSEMBLY-LIB-MRREQUIRED-MAPR520"
+                name="SPARK-MAPRSTREAMS-ASSEMBLY-LIB-MRREQUIRED-MAPR520">
+            <!-- <library id="spark-streaming-kafka-v09_2.10-1.6.1-mapr-1605.jar"/>
+            <library id="kafka_2.10-0.9.0.0-mapr-1607.jar"/> -->
+            <library id="mapr-streams-5.2.0-mapr.jar"/>
+            <library id="metrics-core-2.2.0.jar"/>
+        </libraryNeededGroup>
+        
+        <!-- Spark MapR Streams Client group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Spark MapR Streams client libraries for MapR 5.2.0 that are MRREQUIRED"
+                id="SPARK-MAPRSTREAMS-CLIENT-LIB-MRREQUIRED-MAPR520"
+                name="SPARK-MAPRSTREAMS-CLIENT-LIB-MRREQUIRED-MAPR520">
+            <!-- <library id="kafka-clients-0.9.0.0-mapr-1607.jar"/> -->
+            <library id="mapr-streams-5.2.0-mapr.jar"/>
+        </libraryNeededGroup>
         
     </extension>
     <extension
