--- a/main/plugins/org.talend.hadoop.distribution.mapr520/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr520/plugin.xml
@@ -149,6 +149,12 @@
         </libraryNeeded>
        <libraryNeeded
             context="plugin:org.talend.libraries.hadoop.mapr.5.2.0"
+            id="maprdb-5.2.0-mapr.jar"
+            name="maprdb-5.2.0-mapr.jar"
+            mvn_uri="mvn:org.talend.libraries/maprdb-5.2.0-mapr/6.3.0" >
+        </libraryNeeded>
+       <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.2.0"
             id="hbase-client-1.1.1-mapr-1602.jar"
             name="hbase-client-1.1.1-mapr-1602.jar"
             mvn_uri="mvn:org.talend.libraries/hbase-client-1.1.1-mapr-1602/6.2.0" >
@@ -391,6 +397,20 @@
             id="flexjson-2.1.jar"
             name="flexjson-2.1.jar"
             mvn_uri="mvn:org.talend.libraries/flexjson-2.1/6.2.0" >
+        </libraryNeeded>
+        
+       <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.2.0"
+            id="ojai-1.1.jar"
+            name="ojai-1.1.jar"
+            mvn_uri="mvn:org.talend.libraries/ojai-1.1/6.3.0" >
+        </libraryNeeded>
+        
+       <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.2.0"
+            id="antlr4-runtime-4.5.jar"
+            name="antlr4-runtime-4.5.jar"
+            mvn_uri="mvn:org.talend.libraries/antlr4-runtime-4.5/6.3.0" >
         </libraryNeeded>
 
         <libraryNeededGroup
@@ -725,6 +745,13 @@
                 id="MAPRSTREAMS-LIB-MAPR520"
                 name="MAPRSTREAMS-LIB-MAPR520">
             <library id="maprfs-5.2.X-lastest"/>
+            <library id="hadoop-common-2.7.0-mapr-1607.jar"/>
+            <library id="hadoop-auth-2.7.0-mapr-1607.jar"/>   
+            <library id="commons-logging-1.1.3.jar"/>
+            <library id="commons-collections-3.2.2.jar"/>
+            <library id="commons-configuration-1.6.jar"/>
+            <library id="commons-lang-2.6.jar"/>
+            <library id="commons-io-2.4.jar"/>
             <library id="protobuf-java-2.5.0.jar"/>
             <library id="mapr-streams-5.2.0-mapr.jar"/>
             <library id="kafka_2.10-0.9.0.0-mapr-1607.jar"/>
@@ -742,6 +769,16 @@
             <library id="json-20080701.jar"/>
             <library id="flexjson-2.1.jar"/>
             <library id="guava-14.0.1.jar"/>
+         </libraryNeededGroup>
+        
+         <!-- MapRStreams CreateStreams group -->    
+         <libraryNeededGroup
+                description="Additional MapRStreams 5.2.0 libraries for tMapRStreamsCreateStream"
+                id="MAPRSTREAMS-CREATESTREAM-LIB-MAPR520"
+                name="MAPRSTREAMS-CREATESTREAM-LIB-MAPR520">
+            <library id="ojai-1.1.jar"/>
+            <library id="maprdb-5.2.0-mapr.jar"/>
+            <library id="antlr4-runtime-4.5.jar"/>
         </libraryNeededGroup>
         
         <!-- Spark MapR Streams group MRREQUIRED -->
