--- a/main/plugins/org.talend.designer.components.bigdata/components/tMapRStreamsCreateStream/tMapRStreamsCreateStream_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMapRStreamsCreateStream/tMapRStreamsCreateStream_messages.properties
@@ -1,24 +1,48 @@
 HELP=org.talend.help.tMapRStreamsCreateStream
-LONG_NAME=Create a stream on MapR Streams
+LONG_NAME=Manage streams and topics on MapR Streams
 SCHEMA.NAME=Schema
 
 VERSION.NAME=Version
 
-STREAM.NAME=Stream name
-STREAM_REPLICATION.NAME=Replication factor
-STREAM_PARTITION.NAME=Number of partitions
-STREAM_RETENTION_CHECK.NAME=Set topic retention time (ms)
-STREAM_RETENTION.NAME=
+CONNECTION.NAME=tMapRStreamsConnection
 
-STREAM_PROPERTIES.NAME=Topic properties
-STREAM_PROPERTIES.ITEM.PROPERTY=Property
-STREAM_PROPERTIES.ITEM.VALUE=Value
+STREAM.NAME=Stream path
 
-STREAM_ACTION.NAME=Action on stream
+ACTION.NAME=Action
+ACTION.ITEM.CREATE_STREAM=Create stream
+ACTION.ITEM.CREATE_STREAM_IF_NOT_EXISTS=Create stream if not exists
+ACTION.ITEM.ALTER_STREAM=Alter stream
+ACTION.ITEM.CREATE_TOPIC=Create topic
+ACTION.ITEM.CREATE_TOPIC_IF_NOT_EXISTS=Create topic if not exists
+ACTION.ITEM.ALTER_TOPIC=Alter topic
 
-STREAM_ACTION.ITEM.CREATE_STREAM=Create stream
-STREAM_ACTION.ITEM.CREATE_IF_NOT_EXISTS=Create stream if not exists
-STREAM_ACTION.ITEM.ALTER_STREAM=Alter stream
+ALTER_ADMIN_PERMS.NAME=Change adminperms
+ALTER_CONSUME_PERMS.NAME=Change consumeperms
+ALTER_PRODUCE_PERMS.NAME=Change produceperms
+ALTER_COPY_PERMS.NAME=Change copyperms
+ALTER_AUTO_CREATE_TOPICS.NAME=Change automatic topic creation
+ALTER_DEFAULT_PARTITIONS.NAME=Change default number of partitions
+ALTER_TOPIC_PERMS.NAME=Change topicperms
+ALTER_TIME_TO_LIVE.NAME=Change messages time to live
+ALTER_COMPRESSION.NAME=Change compression
 
-ZOOKEEPER_CONNECT.NAME=Zookeeper quorum list
-ZOOKEEPER_SECURITY_IS_ENABLED.NAME=Zookeeper security is enabled
+STREAM_ADMIN_PERMS.NAME=Adminperms
+STREAM_CONSUME_PERMS.NAME=Consumeperms
+STREAM_PRODUCE_PERMS.NAME=Produceperms
+STREAM_COPY_PERMS.NAME=Copyperms
+STREAM_AUTO_CREATE_TOPICS.NAME=Enable automatic topic creation
+STREAM_DEFAULT_PARTITIONS.NAME=Default number of partitions
+STREAM_TOPIC_PERMS.NAME=Topicperms
+STREAM_TIME_TO_LIVE.NAME=Messages time to live (s)
+STREAM_COMPRESSION.NAME=Compression
+STREAM_COMPRESSION.ITEM.LZ4=lz4
+STREAM_COMPRESSION.ITEM.LZF=lzf
+STREAM_COMPRESSION.ITEM.ZLIB=zlib
+
+TOPIC.NAME=Topic name
+SET_NB_PARTITIONS.NAME=Set number of partitions
+TOPIC_NB_PARTITIONS.NAME=Number of partitions
+
+STREAM_PERMS_GROUP.NAME=Stream permissions
+STREAM_SETTINGS_GROUP.NAME=Stream settings
+TOPIC_SETTINGS_GROUP.NAME=Topic settings
