--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,8 @@
 		<module>main/plugins/org.talend.hadoop.distribution.mapr500</module>
 		<module>main/plugins/org.talend.hadoop.distribution.mapr510</module>
 		<module>main/plugins/org.talend.hadoop.distribution.mapr510.jars</module>
+		<module>main/plugins/org.talend.hadoop.distribution.mapr520</module>
+		<module>main/plugins/org.talend.hadoop.distribution.mapr520.jars</module>
 		<module>main/plugins/org.talend.hadoop.distribution.piv101</module>
 		<module>main/plugins/org.talend.hadoop.distribution.piv200</module>
 		<module>main/plugins/org.talend.demo.bigdata.ce</module>
@@ -167,6 +169,7 @@
 		<module>test/plugins/org.talend.hadoop.distribution.mapr410.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.mapr500.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.mapr510.test</module>
+		<module>test/plugins/org.talend.hadoop.distribution.mapr520.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.piv101.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.piv200.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.test.base</module>
