[TBD-3845] : Support HDFS encryption

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
@@ -78,3 +78,6 @@ SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
 MAPR_HOME_DIR.NAME=
 SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
 HADOOP_LOGIN.NAME=
+ENCRYPTION.NAME=Encryption
+USE_HDFS_ENCRYPTION.NAME=Setup HDFS Encryption Configurations
+HDFS_ENCRYPTION_KEY_PROVIDER.NAME=HDFS Encryption Key Provider (KMS)
