--- a/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
@@ -541,6 +541,10 @@
              <library id="jersey-core-1.9.jar" />
              <library id="htrace-core4-4.0.1-incubating.jar" />
              <library id="servlet-api-2.5.jar"/>
+             <library id="httpclient-4.2.5.jar"/>
+             <library id="httpcore-4.2.5.jar"/>
+             <library id="jackson-mapper-asl-1.8.8.jar" />
+             <library id="jackson-core-asl-1.8.8.jar" />
         </libraryNeededGroup>
         
         <!-- Map/Reduce group -->
