--- a/main/plugins/org.talend.hadoop.distribution.hdinsight340/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight340/plugin.xml
@@ -195,6 +195,10 @@
              <library id="guava-12.0.1.jar" />
              <library id="protobuf-java-2.5.0.jar" />
              <library id="org.apache.commons.httpclient_3.1.0.v201012070820.jar" />
+             <library id="httpclient-4.2.5.jar"/>
+             <library id="httpcore-4.2.5.jar"/>
+             <library id="jackson-mapper-asl-1.8.8.jar" />
+             <library id="jackson-core-asl-1.8.8.jar" />
         </libraryNeededGroup>
         
         <!-- Map/Reduce group -->
