--- a/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
@@ -407,7 +407,11 @@
              <library id="protobuf-java-2.5.0.jar"/>
              <library id="servlet-api-2.5.jar"/>
              <library id="slf4j-api-1.7.10.jar"/>
-             <library id="slf4j-log4j12-1.7.10.jar"/>                    
+             <library id="slf4j-log4j12-1.7.10.jar"/>
+             <library id="httpclient-4.4.jar"/>
+             <library id="httpcore-4.4.jar"/>
+             <library id="jackson-core-asl-1.9.13.jar"/>
+            <library id="jackson-mapper-asl-1.9.13.jar"/>
         </libraryNeededGroup>
         
         <!-- Map/Reduce group -->
