--- a/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
@@ -586,7 +586,9 @@
              <library id="slf4j-api-1.7.10.jar"/>
              <library id="slf4j-log4j12-1.7.10.jar"/>     
              <library id="jackson-mapper-asl-1.9.13.jar"/>  
-             <library id="jackson-core-asl-1.9.13.jar"/>             
+             <library id="jackson-core-asl-1.9.13.jar"/>
+             <library id="httpclient-4.5.2.jar"/>
+             <library id="httpcore-4.4.4.jar"/>
         </libraryNeededGroup>
         
         <!-- Map/Reduce group -->
