--- a/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
@@ -242,6 +242,28 @@
             mvn_uri="mvn:org.talend.libraries/sqoop-1.4.6-cdh5.5.2/6.1.0">
         </libraryNeeded>                        
         
+		<!-- GraphFrames libraries -->
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh570"
+            id="graphframes-0.2.0-spark1.6-s_2.10.jar"
+            name="graphframes-0.2.0-spark1.6-s_2.10.jar"
+            mvn_uri="mvn:org.talend.libraries/graphframes-0.2.0-spark1.6-s_2.10/6.0.0">
+        </libraryNeeded>
+        
+		<libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh570"
+            id="scala-logging-slf4j_2.10-2.1.2.jar"
+            name="scala-logging-slf4j_2.10-2.1.2.jar"
+            mvn_uri="mvn:org.talend.libraries/scala-logging-slf4j_2.10-2.1.2/6.0.0">
+        </libraryNeeded>
+        
+		<libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh570"
+            id="scala-logging-api_2.10-2.1.2.jar"
+            name="scala-logging-api_2.10-2.1.2.jar"
+            mvn_uri="mvn:org.talend.libraries/scala-logging-api_2.10-2.1.2/6.0.0">
+        </libraryNeeded>
+        
         <!-- Third parties libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh570"
@@ -508,7 +530,7 @@
             id="kite-hadoop-compatibility-1.0.0-cdh5.7.0.jar"
             name="kite-hadoop-compatibility-1.0.0-cdh5.7.0.jar"
             mvn_uri="mvn:org.talend.libraries/kite-hadoop-compatibility-1.0.0-cdh5.7.0/6.0.0">
-        </libraryNeeded>        
+        </libraryNeeded>
                         
         <!-- Groups -->
         
@@ -783,6 +805,16 @@
              <library id="jets3t-0.9.0" />
              <library id="httpclient-4.2.5.jar" />
              <library id="httpcore-4.2.5.jar" />
+        </libraryNeededGroup>
+        
+        <!-- GraphFrames group MRREQUIRED -->
+        <libraryNeededGroup
+                description="GraphFrames libraries for CDH 5.7 that are MRREQUIRED"
+                id="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-CDH_5_7"
+                name="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-CDH_5_7">
+             <library id="scala-logging-slf4j_2.10-2.1.2.jar"/>
+             <library id="scala-logging-api_2.10-2.1.2.jar"/>
+             <library id="graphframes-0.2.0-spark1.6-s_2.10.jar" />
         </libraryNeededGroup>
         
         <!-- Spark Hive group MRREQUIRED -->
