--- a/main/plugins/org.talend.hadoop.distribution.emr450/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr450/plugin.xml
@@ -372,6 +372,17 @@
              <library id="jets3t-0.9.0"/>
         </libraryNeededGroup>
         
+        <!-- GraphFrames group MRREQUIRED -->
+        <libraryNeededGroup
+                description="GraphFrames libraries for EMR 4.5.0 that are MRREQUIRED"
+                id="GRAPHFRAMES-LIB-EMR_4_5_0_LATEST"
+                name="GRAPHFRAMES-LIB-EMR_4_5_0_LATEST">
+             <library id="scala-logging-slf4j_2.10-2.1.2.jar"/>
+             <library id="scala-logging-api_2.10-2.1.2.jar"/>
+             <library id="graphframes-0.2.0-spark1.6-s_2.10.jar" />
+        </libraryNeededGroup>
+        
+        
         <!-- Map/Reduce group -->
         <libraryNeededGroup
                 description="The latest Map Reduce libraries of EMR 4.5.0"
