--- a/main/plugins/org.talend.hadoop.distribution.hdinsight340/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight340/plugin.xml
@@ -145,7 +145,29 @@
             id="spark-assembly-hdinsight340"
             name="spark-assembly-1.6.0.2.4.0.0-169-hadoop2.7.1.2.4.0.0-169.jar"
             mvn_uri="mvn:org.talend.libraries/spark-assembly-1.6.0.2.4.0.0-169-hadoop2.7.1.2.4.0.0-169/6.0.0">
-        </libraryNeeded>                
+        </libraryNeeded>
+        
+        <!-- GraphFrames libraries -->
+		<libraryNeeded 
+			context="plugin:org.talend.hadoop.distribution.hdinsight340"
+			id="graphframes-0.2.0-spark1.6-s_2.10.jar" 
+			name="graphframes-0.2.0-spark1.6-s_2.10.jar"
+			mvn_uri="mvn:org.talend.libraries/graphframes-0.2.0-spark1.6-s_2.10/6.0.0">
+		</libraryNeeded>
+		
+		<libraryNeeded 
+			context="plugin:org.talend.hadoop.distribution.hdinsight340"
+			id="scala-logging-slf4j_2.10-2.1.2.jar" 
+			name="scala-logging-slf4j_2.10-2.1.2.jar"
+			mvn_uri="mvn:org.talend.libraries/scala-logging-slf4j_2.10-2.1.2/6.0.0">
+		</libraryNeeded>
+		
+		<libraryNeeded 
+			context="plugin:org.talend.hadoop.distribution.hdinsight340"
+			id="scala-logging-api_2.10-2.1.2.jar" 
+			name="scala-logging-api_2.10-2.1.2.jar"
+			mvn_uri="mvn:org.talend.libraries/scala-logging-api_2.10-2.1.2/6.0.0">
+		</libraryNeeded>
 
         <!-- Third parties libraries -->
         <libraryNeeded
@@ -348,6 +370,16 @@
              <library id="httpcore-4.2.5.jar" />
         </libraryNeededGroup>
         
+        <!-- GraphFrames group MRREQUIRED -->
+		<libraryNeededGroup
+			description="GraphFrames libraries for HDInsight 3.4.0 that are MRREQUIRED" 
+			id="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-HD_INSIGHT_3_4_0"
+			name="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-HD_INSIGHT_3_4_0">
+			<library id="scala-logging-slf4j_2.10-2.1.2.jar" />
+			<library id="scala-logging-api_2.10-2.1.2.jar" />
+			<library id="graphframes-0.2.0-spark1.6-s_2.10.jar" />
+		</libraryNeededGroup>
+
         <!-- Spark Hive group MRREQUIRED -->
         <libraryNeededGroup
                 description="Spark Hive libraries for HDInsight 3.4.0 that are MRREQUIRED"
