--- a/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
@@ -289,6 +289,28 @@
             mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl-assembly_2.10-1.6.0/6.1.0">
         </libraryNeeded>
         
+        <!-- GraphFrames libraries -->
+		<libraryNeeded 
+			context="plugin:org.talend.hadoop.distribution.hdp240"
+			id="graphframes-0.2.0-spark1.6-s_2.10.jar" 
+			name="graphframes-0.2.0-spark1.6-s_2.10.jar"
+			mvn_uri="mvn:org.talend.libraries/graphframes-0.2.0-spark1.6-s_2.10/6.0.0">
+		</libraryNeeded>
+		
+		<libraryNeeded 
+			context="plugin:org.talend.hadoop.distribution.hdp240"
+			id="scala-logging-slf4j_2.10-2.1.2.jar" 
+			name="scala-logging-slf4j_2.10-2.1.2.jar"
+			mvn_uri="mvn:org.talend.libraries/scala-logging-slf4j_2.10-2.1.2/6.0.0">
+		</libraryNeeded>
+		
+		<libraryNeeded 
+			context="plugin:org.talend.hadoop.distribution.hdp240"
+			id="scala-logging-api_2.10-2.1.2.jar" 
+			name="scala-logging-api_2.10-2.1.2.jar"
+			mvn_uri="mvn:org.talend.libraries/scala-logging-api_2.10-2.1.2/6.0.0">
+		</libraryNeeded> 
+        
         <!-- Third parties libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.hdp240"
@@ -865,6 +887,16 @@
              <library id="httpclient-4.2.5.jar" />
              <library id="httpcore-4.2.5.jar" />
         </libraryNeededGroup>
+        
+        <!-- GraphFrames group MRREQUIRED -->
+		<libraryNeededGroup
+			description="GraphFrames libraries for HDP 2.4 that are MRREQUIRED" 
+			id="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-HDP_2_4"
+			name="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-HDP_2_4">
+			<library id="scala-logging-slf4j_2.10-2.1.2.jar" />
+			<library id="scala-logging-api_2.10-2.1.2.jar" />
+			<library id="graphframes-0.2.0-spark1.6-s_2.10.jar" />
+		</libraryNeededGroup>
         
         <!-- Spark Parquet group MRREQUIRED -->
         <libraryNeededGroup
