--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,8 @@
 		<module>main/plugins/org.talend.hadoop.distribution.hdp230</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdp240</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdp240.jars</module>
+                <module>main/plugins/org.talend.hadoop.distribution.hdp250</module>
+                <module>main/plugins/org.talend.hadoop.distribution.hdp250.jars</module>
 		<module>main/plugins/org.talend.hadoop.distribution.mapr200</module>
 		<module>main/plugins/org.talend.hadoop.distribution.mapr212</module>
 		<module>main/plugins/org.talend.hadoop.distribution.mapr213</module>
@@ -160,6 +162,7 @@
 		<module>test/plugins/org.talend.hadoop.distribution.hdp220.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.hdp230.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.hdp240.test</module>
+		<module>test/plugins/org.talend.hadoop.distribution.hdp250.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.mapr200.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.mapr212.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.mapr213.test</module>
