Feature/6.3/tbd 3947 add support map r db (#131)
* TBD-4026:Add the basic code for MapR-DB wizard(TBD-3947)

* TBD-4040:add MapR-DB support for Hadoop Cluster(TBD-3947)

* TUP-15883:Test and update code since component pushed(TUP-14770)

* TUP-14770:add a new maprdbprovider plugin to bd-se pom

--- a/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
+++ b/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
@@ -219,6 +219,14 @@
              level="10"
              name="Metadata/Create HBase">
        </Action>
+       <Action
+             class="org.talend.repository.maprdb.action.CreateMaprdbAction"
+             id="org.talend.repository.maprdb.action.CreateMaprdbAction"
+             isEditAction="true"
+             isReadAction="true"
+             level="10"
+             name="Metadata/Create MapRDB">
+       </Action>
     </extension>
     <extension
           point="org.talend.repository.items.importexport.handler">
